Fix visibility issue on journal image input fields when using the PF2e Journal

--- a/src/styles/legacy/_pf2e.scss
+++ b/src/styles/legacy/_pf2e.scss
@@ -17,8 +17,8 @@
 /* ----------------------------------------- */
 /* Sheet Structure                           */
 /* ----------------------------------------- */
-
-.pf2e.sheet {
+// Note: pf2e.sheet.item will change specificity and cause sheet breakage
+.pf2e.actor, .pf2e.item {
     .window-content {
         padding: 5px;
         font-size: 13px;
